--- a/css/screen.css
+++ b/css/screen.css
@@ -7,6 +7,13 @@
 /*---------------------------------------/*
  # GENERIC
 /*---------------------------------------*/
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  font-weight: normal;
+}
+
 /*---------------------------------------/*
  # ELEMENTS
 /*---------------------------------------*/
