--- a/css/screen.scss
+++ b/css/screen.scss
@@ -163,6 +163,10 @@ $breakpoints: (
 
 * {
   // Reset margin and font-size and font-weight
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  font-weight: normal;
 }
 
 img {
