--- a/css/screen.css
+++ b/css/screen.css
@@ -7,11 +7,22 @@
 /*---------------------------------------/*
  # GENERIC
 /*---------------------------------------*/
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 * {
   margin: 0;
   padding: 0;
   font-size: 100%;
   font-weight: normal;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 /*---------------------------------------/*
