--- a/css/screen.css
+++ b/css/screen.css
@@ -124,6 +124,13 @@ figcaption {
   color: hsl(198.0786026201, 10%, 50%);
 }
 
+hr {
+  border: 0;
+  height: 1px;
+  background: hsl(198.0786026201, 10%, 90%);
+  margin-bottom: 1.5rem;
+}
+
 /*---------------------------------------/*
  # OBJECTS
 /*---------------------------------------*/
