--- a/css/screen.css
+++ b/css/screen.css
@@ -131,6 +131,23 @@ hr {
   margin-bottom: 1.5rem;
 }
 
+a {
+  color: hsl(198.0786026201, 100%, 40%);
+  transition: all 0.1s ease;
+}
+
+a:hover {
+  color: hsl(198.0786026201, 100%, 50%);
+}
+
+a:visited {
+  color: hsl(198.0786026201, 100%, 40%);
+}
+
+a:active {
+  color: hsl(198.0786026201, 100%, 30%);
+}
+
 /*---------------------------------------/*
  # OBJECTS
 /*---------------------------------------*/
