--- a/css/screen.scss
+++ b/css/screen.scss
@@ -196,8 +196,15 @@ html {
   font-family: $font-family-primary;
   color: $color-text;
   scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
-
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 /*
     Customize the background color and color to match your design.
 */
